# whisper-autotune

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  install_non_poetry.sh  pyproject.toml
.devcontainer/: whisper-asr-development
.github/workflows/: run-tests.yaml
whisper_asr/: configs.py  data.py  datatypes.py  finetune.py  run.py
