[tool.poetry]
name = "whisper-asr"
version = "0.1.0"
description = ""
authors = ["Ankush Malaker <43288948+AnkushMalaker@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "whisper_asr"}]

[tool.poetry.dependencies]
python = "^3.10"
whisper-jax = {git = "https://github.com/sanchit-gandhi/whisper-jax.git"}
fsspec = "^2023.6.0"
youtube-dl = {git = "https://github.com/ytdl-org/youtube-dl"}
pydub = "^0.25.1"
datasets = "^2.13.1"
torchaudio = "^2.0.2"
evaluate = "^0.4.0"
jiwer = "^3.0.2"
accelerate = "^0.20.3"

[tool.poetry.scripts]
whisper-asr = "whisper_asr.run:infer_file"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.0"
isort = "^5.12.0"
ipython = "^8.14.0"
ipdb = "^0.13.13"
wandb = "^0.15.4"



[[tool.poetry.source]]
name = "jax_cuda"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "explicit"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
